                         CHANGES version 2.9

              This file summarizes changes made since 1.0


Version 2.9
-----------
* If an abort handler is not set; On a fatal error, libzdb now calls
  abort() only if the library debug flag is set, otherwise exit(1) 
  is called
* SQLite: Unescape path to allow for (white-)space in database file 
  path. Note that this modify URL.path. Thank to Jonas Schnelli
              
Version 2.8.1
-------------
* Oracle: Fixed a transaction related memory leak
              
Version 2.8
-----------
* Allow spaces in URL property values
* PostgreSQL: Allow sending application name to the server for 
  logging. Thanks to Chris Mayo. See the PostgreSQL URL property,
  application-name.
Bug fixes:
* ResultSet_getBlob: Ensure that returned blob size is 0 if blob
  is SQL null.
* Oracle: Fixed ResultSet memory leak.

Version 2.7
-----------
* Added tentative support for Oracle. Thanks to Volodymyr
  Tarasenko, and Sergey Pavlov for implementing this.
  This implementation does not support BLOB, though CLOB
  is supported. It will also not run all zdb unit tests,
  but should be useful for most purposes. It is released
  with the hope that others may still find it useful and
  help iron out any remaining issues.
* Added new convenience zdb.h meta include file which
  can be used to include all required API interfaces
* Internal optimizing changes and improvements
* SQLite: Clear connection on rollback to prevent SQLite
  from issue an SQLITE_BUSY error if there are pending
  selects in progress.
* SQLite: added a "heap_limit" URL property. Makes SQLite 
  auto-release unused memory if memory usage goes above 
  the specified limit [KB]. Require that SQLite is
  compiled with the SQLITE_ENABLE_MEMORY_MANAGEMENT option
  to take effect.
Bug fixes:
* SQLite: Ensure that the database file is specified in
  connection URL. Thanks to Bogdan Nicula.
* PostgreSQL: Implemented Connection_setQueryTimeout()

Version 2.6
-----------